# sudo-sentinel

./: .gcloudignore  .gitignore  Cargo.toml  Dockerfile.rhel8  README.md  TEST-RHEL8-CONTAINER.md  audit.rs  config.rs  config.toml  event.rs  main.rs  matcher.rs  sudo-sentinel.service
