[package]
name = "sudo-sentinel"
version = "0.1.0"
edition = "2021"
description = "Daemon that monitors sudo invocations via the Linux Audit subsystem and kills them based on configurable rules"

[dependencies]
# Low-level Linux primitives (signals, pids, errno)
nix = { version = "0.29", features = ["signal", "process"] }
# Raw C types / syscalls for netlink
libc = "0.2"
# Config file deserialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Error handling
anyhow = "1"
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "sudo-sentinel"
path = "main.rs"
